# incubate

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING  LICENSE  README.md  pyproject.toml  tox.ini
.github/workflows/: main.yml
incubate/: __main__.py  incubate.py  static.py  theme.py  tree.py  validate.py
incubate/templates/: .gitignore.j2  .pre-commit-config.yaml.j2  CONTRIBUTING.j2  README.md.j2  pyproject.toml.j2
incubate/templates/licenses/: Apache-2.0.j2  BSD-1-Clause.j2  BSD-2-Clause.j2  BSD-3-Clause.j2  MIT.j2
incubate/templates/projects/Default/: .gitignore.j2  CONTRIBUTING.j2  LICENSE.j2  README.md.j2  pyproject.toml.j2
incubate/templates/projects/Default/src/{{ project }}/: __main__.py.j2  scripts.py.j2
incubate/templates/projects/Default/src/{¤ project ¤}/: __main__.py.j2  scripts.py.j2
incubate/templates/projects/Default/test/: test_sanity.py.j2
incubate/templates/projects/FastAPI/: .env.j2  .gitignore.j2  .pre-commit-config.yaml.j2  CONTRIBUTING.j2  LICENSE.j2  README.md.j2  pyproject.toml.j2
incubate/templates/projects/FastAPI/app/: __main__.py.j2  app.py.j2  auth.py.j2  models.py.j2
test/: conftest.py  test_sanity.py  test_templates.py
