# -------------------------------------------------------------------------------------------------
# Build system settings
# -------------------------------------------------------------------------------------------------
[build-system]
requires = ["setuptools", "wheel", "setuptools-scm[toml]"]
build-backend = "setuptools.build_meta"

[tool.distutils.bdist_wheel]
universal = true

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
incubate = ["templates/**/*.j2"]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["test"]
namespaces = false # to disable scanning PEP 420 namespaces (true by default)

# -------------------------------------------------------------------------------------------------
# Build metadata
# -------------------------------------------------------------------------------------------------
[project]
name = "incubate"
description = ""
dynamic = ["version"]

requires-python = ">=3.10"
dependencies = [
    "rich",
    "inquirer",
    "email-validator",
    "jinja2",
    "pre-commit",
]

keywords = ["template"]

classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.license]
text = "LICENSE"


[project.optional-dependencies]
dev = [ # Development dependencies
    "black",                      # code formatter
    "coverage_enable_subprocess", # coverage for subprocesses
    "coverage",                   # code coverage
    "mypy",                       # type checker
    "pytest",                     # test runner
    "ruff",                       # code lint/formatter
    "scalene",                    # profiler
    "tox",                        # test runner
]


[project.scripts]
incubate = "incubate.__main__:main"


# -------------------------------------------------------------------------------------------------
# Authors and maintainers
# -------------------------------------------------------------------------------------------------
[[project.authors]]
name = "Benjamin Hallenrud"


# -------------------------------------------------------------------------------------------------
# Linter and formatter settings
# -------------------------------------------------------------------------------------------------
[tool.black]
line-length = 120

[tool.ruff]
line-length = 120
select = [
    "I001"  # isort
]
