[build-system]
requires = ["setuptools-scm[toml]>=7", "setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[tool.distutils.bdist_wheel]
universal = true

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
incubate = ["templates/**/*.j2"]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["test"]
namespaces = false # to disable scanning PEP 420 namespaces (true by default)

[tool.setuptools_scm]

[project]
name = "incubate"
description = ""
dynamic = ["version"]

requires-python = ">=3.10"
dependencies = [
    "argcomplete>=3",
    "email-validator",
    "inquirer",
    "jinja2",
    "pre-commit",
    "rich",
]

keywords = ["template"]

classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.license]
file = "LICENSE"

[[project.authors]]
name = "Benjamin Hallenrud"

[project.optional-dependencies]
dev = [ # Development dependencies
    "black",                      # code formatter
    "coverage_enable_subprocess", # coverage for subprocesses
    "coverage",                   # code coverage
    "mypy",                       # type checker
    "pytest",                     # test runner
    "ruff",                       # code lint/formatter
    "scalene",                    # profiler
    "tox",                        # test runner
]

[project.scripts]
incubate = "incubate.__main__:main"

# -------------------------------------------------------------------------------------------------
# Linter and formatter settings
# -------------------------------------------------------------------------------------------------
[tool.black]
line-length = 120

[tool.ruff]
line-length = 120
select = ["B", "C", "E", "F", "G", "I", "Q", "W", "UP", "PL"]
